3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Factorize compound animation code.
 common/anim.c
 include/libproto.h
 server/apply.c attack.c spell_util.c
Nicolas Weeger 2007-12-09

Fix 0 destination coordinates warning for final exit of random maps.
 random_maps/exit.c
Nicolas Weeger 2007-12-02

Enable a special exit to final map in random maps, through the
 'final_exit_archetype' field.
 random_maps/exit.c random_map.c random_map.h reader.l
Nicolas Weeger 2007-12-02

Add death animation to objects, through the key 'death_animation' (which should
 be an archetype).
 server/attack.c: check for a death animation to insert.
Nicolas Weeger 2007-12-02

Fix bug #1828785: Possible false positive in the alchemy formula list.
 common/recipe.c: don't warn of same index id if not same cauldron.
Nicolas Weeger 2007-12-01

Fix bug #1825685: "Got no region..." when creating weather.
 server/init.c: delay weather initialisation after other ones.
Nicolas Weeger 2007-12-01

Fix some nrof issues when many items. Always return real money value.
 server/c_object.c: divide before multiply to avoid some overflows.
 server/c_wiz.c: nrof is uint32.
 server/shop.c: nrof is uint32. Money we know the real value.
Nicolas Weeger 2007-12-01

Fix bug #1827100: Curse dection not working or problem with containers ?
 server/alchemy.c: ensure cursed items can be identified.
 server/skills.c: cauldrons are always checked for curse status, it is important to know it.
Nicolas Weeger 2007-12-01

Fix bug #1841391: Item Power and pickup bug.
 common/object.c: check item_power for merging test.
Nicolas Weeger 2007-12-01

Fix bug #1833943: Buffer overflow in item power calculation.